@@ -49,7 +49,7 @@ struct sg_version_descriptor {
 };
 
 /* table from SPC-4 revision 36 [sorted numerically (from Annex E.9)] */
-/* Can also be obtained from : http://www.t10.org/lists/stds.txt 20130930 */
+/* Can also be obtained from : http://www.t10.org/lists/stds.txt 20131126 */
 
 #ifdef SG_SCSI_STRINGS
 struct sg_version_descriptor sg_version_descriptor_arr[] = {
@@ -198,6 +198,7 @@ struct sg_version_descriptor sg_version_descriptor_arr[] = {
     {0x4ac, "ADC-2 ANSI INCITS 441-2008"},
     {0x4c0, "SBC-3 (no version claimed)"},
     {0x4c3, "SBC-3 T10/BSR INCITS 514 revision 35"},
+    {0x4c5, "SBC-3 T10/BSR INCITS 514 revision 36"},
     {0x4e0, "MMC-6 (no version claimed)"},
     {0x4e3, "MMC-6 T10/1836-D revision 2b"},
     {0x4e5, "MMC-6 T10/1836-D revision 02g"},
@@ -218,6 +219,7 @@ struct sg_version_descriptor sg_version_descriptor_arr[] = {
     {0x5c0, "SPC-5 (no version claimed)"},
     {0x5e0, "SFSC (no version claimed)"},
     {0x600, "SBC-4 (no version claimed)"},
+    {0x620, "ZBC (no version claimed)"},
     {0x820, "SSA-TL2 (no version claimed)"},
     {0x83b, "SSA-TL2 T10/1147-D revision 05b"},
     {0x83c, "SSA-TL2 ANSI INCITS 308-1998"},
@@ -333,6 +335,7 @@ struct sg_version_descriptor sg_version_descriptor_arr[] = {
     {0xc4e, "SAS-2.1 ANSI INCITS 478-2011"},
     {0xc60, "SAS-3 (no version claimed)"},
     {0xc63, "SAS-3 T10/BSR INCITS 519 revision 05a"},
+    {0xc65, "SAS-3 T10/BSR INCITS 519 revision 06"},
     {0xc80, "SAS-4 (no version claimed)"},
     {0xd20, "FC-PH (no version claimed)"},
     {0xd3b, "FC-PH ANSI INCITS 230-1994"},
@@ -481,6 +484,7 @@ struct sg_version_descriptor sg_version_descriptor_arr[] = {
     {0x20e4, "SPL-3 T10/BSR INCITS 492 revision 6"},
     {0x21e0, "SOP (no version claimed)"},
     {0x21e4, "SOP T10/BSR INCITS 489 revision 4"},
+    {0x21e6, "SOP T10/BSR INCITS 489 revision 5"},
     {0x2200, "PQI (no version claimed)"},
     {0x2204, "PQI T10/BSR INCITS 490 revision 6"},
     {0x2206, "PQI T10/BSR INCITS 490 revision 7"},
